--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,4 @@
         <input id="password" [(ngModel)]="user.password" placeholder="password" [ngModelOptions]="{ standalone: true }" >
       <button (click)="login(user)">Search</button>
     </form>
+</div>
